# pjt-sprint_ai07_bidmateRAG

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  history.json  pyproject.toml
.github/workflows/: ci.yml
app/: CLAUDE.md  __init__.py  eval_ui.py  main.py
app/api/: routes.py
configs/: base.yaml  pricing.yaml  retrieval.yaml
configs/chunking/: chunking_semantic_interquartile.yaml  chunking_semantic_std.yaml
configs/data_quality/: duplicates_map.csv
configs/experiments/: auto_exp_01.yaml  auto_exp_02.yaml  auto_exp_03.yaml  auto_exp_04.yaml  auto_exp_05.yaml  auto_exp_06.yaml  auto_exp_07.yaml  auto_exp_08.yaml  auto_exp_09.yaml  auto_exp_10.yaml  full_rag_compare.yaml  generation_compare.yaml
configs/providers/: claude_sonnet.yaml  gemini_flash.yaml  local_hf.yaml  local_vllm.yaml  openai_gpt5mini.yaml  openai_gpt5mini_semantic.yaml
data/eval/: eval_set.json
data/eval_batches/: eval_batch_01.csv
docker/: Dockerfile
docs/: architecture.md  decision-log.md  project-structure.md
docs/PPT/: PPT_콘텐츠_브리프.md  index.html  slide01.html  slide02.html  slide04.html  slide05.html  slide06.html  slide07.html  slide09.html  slide12.html  slide14.html  slide15.html  slide16.html  slide17.html  slide18.html  slide19.html  slide20.html  slide21.html  slide22.html  slide23.html  slide24.html  slide25.html  slide26.html  slide27.html  slide28.html  slide29.html  slide30.html  sprint.md
docs/collaboration/: branch-strategy.md  git-worktree-workflow.md
docs/data-quality/: canonical-selection-policy.md
docs/plans/: 2026-04-02-project-scaffold.md
experiments/notebooks/: 01_eda.ipynb  02_preprocessing.ipynb  03_cleaning.ipynb  04_chunking.ipynb  05_embedding.ipynb  06_retrieval.ipynb  07_generation.ipynb  EDA(kordoc).ipynb
scripts/: build_all_chunking_indexes.py  build_index.py  eval_peft.py  ingest_data.py  run_eval.py  run_experiment.py  run_rag.py  train_peft.py
src/bidmate_rag/: __init__.py  schema.py
tests/integration/: test_chat_pipeline.py  test_run_experiment_wiring.py
tests/unit/: test_app_main.py  test_benchmark_storage.py  test_build_index.py  test_cleaner.py  test_cli_eval.py  test_context_builder.py  test_eval_correctness.py  test_filters.py  test_hf_local_context.py  test_ingest_pipeline.py  test_markdown_report.py  test_matrix_expand.py  test_metadata_loader.py  test_metrics.py  test_multiturn.py  test_openai_compat_context.py  test_pricing.py  test_provider_rewrite.py  test_retriever.py  test_runtime_pipeline.py  test_schema.py  test_schema_validator.py  test_settings.py  test_vector_store.py  test_web_api_routes.py  test_web_api_schemas.py
web/: next.config.ts  package-lock.json  package.json
web/app/: page.tsx
web/lib/: types.ts  (+1 more)
(+5467 files in other folders)
