[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bidmate-rag"
version = "0.1.0"
description = "RAG system scaffold for public and enterprise RFP analysis."
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src/bidmate_rag"]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]
